; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_schema_read_from_file.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_schema_read_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_compiler = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_schema_read_from_file(%struct.tl_compiler* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tl_compiler*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.tl_compiler* %0, %struct.tl_compiler** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.tl_compiler*, %struct.tl_compiler** %4, align 8
  %9 = call i32 @tl_compiler_init(%struct.tl_compiler* %8)
  %10 = load %struct.tl_compiler*, %struct.tl_compiler** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i8* @tl_readfile(%struct.tl_compiler* %10, i8* %11)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

16:                                               ; preds = %2
  %17 = load %struct.tl_compiler*, %struct.tl_compiler** %4, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @tl_schema_read(%struct.tl_compiler* %17, i8* %18)
  store i32 %19, i32* %7, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @free(i8* %20)
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %16, %15
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @tl_compiler_init(%struct.tl_compiler*) #1

declare dso_local i8* @tl_readfile(%struct.tl_compiler*, i8*) #1

declare dso_local i32 @tl_schema_read(%struct.tl_compiler*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
